Basic database functionality

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "@uifabric/react-cards": "^0.109.25"
+    "@uifabric/react-cards": "^0.109.25",
+    "firebase": "^7.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
